fix header layout, clean up css, improve schools list on mobile

--- a/src/app/header/component.scss
+++ b/src/app/header/component.scss
@@ -1,92 +1,23 @@
 @import "../../_vars.scss";
 
-// nav#headerbar {
-//     width:100%;
-//     height:50px;
-//     position:fixed;
-//     z-index: 1;
-//     font-family: $font;  
-//     font-weight: 300;  
-//     background-color: $yacs_bgs;
-//     white-space: nowrap;
-// }
-
-// table#navtable {
-//     width:100%;
-//     height:100%;
-//     border-collapse:collapse;
-//     td {
-//         text-align:center;
-//         vertical-align:middle;
-//     }
-// }
-
-// .sidelink {
-//     width:160px;
-//     cursor:pointer;
-//     a {
-//         color: #FFFFFF;
-//         text-decoration:none;
-//     } 
-// }
-
-// #page-title {
-//     font-size: 35px;
-//     span.sub{
-//         font-size:16px;
-//     }
-// }
-
-// span.tiny{
-//     font-size: 11px;
-// }
-
-// #search {
-//     margin:auto;
-// }
-
-// #searchcontainer {
-//     font-family: $font;
-//     font-weight: 300;
-//     font-size: 18px;
-//     color: white;
-//     background-color: #d57f7f;
-//     border-radius: 2px;
-//     width: 100%;
-//     padding: 3px 4px;
-//     margin:auto;
-
-// }
-
-// #searchbar {
-//     font-family: $font;
-//     font-weight: 300;
-//     font-size: 18px;
-//     max-width: 20em;
-//     border: none;
-//     width: 100%;
-//     background-color: inherit;
-//     color: inherit;
-//     outline: none;
-//     &::-ms-input-placeholder {
-//         color: #FFFFFF;
-
-//     }
-//     &::-moz-placeholder{
-//         color: #FFFFFF;
-
-//     } 
-//     &::-webkit-input-placeholder {
-//         color: #FFFFFF;
-//     }
-// }
-
-.navbar {
+.navbar-custom {
   background-color: $yacs_bgs;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  @media(min-width: 768px) {
+    height: $header_height;
+  }
+
+  .navbar-nav {
+    flex-wrap: nowrap;
+  }
+
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1.0)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  }
 }
 
 .theme-text {
-  text-decoration: none;
   color: #ffffff;
 }
 
@@ -99,11 +30,13 @@
 
 }
 
-form.searchbar {
+.searchbar {
   input {
-    border-left: none;
-    border-color: $yacs_bgs;
+    /*border-left: none;*/
+    border-radius: 2px;
+    border-color: #d57f7f;
     box-shadow: none;
+
   }
 
   .input-group-prepend * {
@@ -111,6 +44,14 @@ form.searchbar {
     border-color: $yacs_bgs;
     background-color: #ffffff;
   }
+}
+
+.dropdown-menu {
+  width: 100% !important;
+  left: 0px !important;
+  border-radius: 2px;
+  margin-top: 0px;
+  padding-top: 0px;
 }
 
 input::placeholder {
@@ -124,7 +65,3 @@ input::placeholder {
   vertical-align: sub;
   padding: 0.1em;
 }
-
-// #schedule-btn {
-//     font-size:22px;
-// }
